improved footer, along with some of the pages.

--- a/index.html
+++ b/index.html
@@ -189,35 +189,35 @@
 		<footer class="row" id="footer">
 			<div class="col-md-2 col-md-offset-2">
 				<ul class="list-unstyled">
-					<li><a href="letsconnect.html">let's connect</a></li>
-					<li><a href="hiring.html">We Are Hiring</a></li>
+					<li>let's connect</li>
+					<li><a href="wearehiring.html">We Are Hiring</a></li>
 					<li><a href="directory.html">Boxesby Directory</a></li>
 					<li><a href="levels.html">Levels</a></li>
-					<li><a href="blog.html">The Boxesby Blog</a></li>
+					<li><a href="blog">The Boxesby Blog</a></li>
 					<li><a href="termsofservice.html">Terms of Service</a></li>
-					<li><a href="privacy.html">Privacy Policy</a></li>
+					<li><a href="privacypolicy.html">Privacy Policy</a></li>
 				</ul>
 			</div>
 			<div class="col-md-2 ">
 				<ul class="list-unstyled">
-					<li><a href="mediapress.html">media and press</a></li>
-					<li><a href="hiring.html">We Are Hiring</a></li>
+					<li>media & press</li>
+					<li><a href="wearehiring.html">We Are Hiring</a></li>
 					<li><a href="directory.html">Boxesby Directory</a></li>
 					<li><a href="levels.html">Levels</a></li>
-					<li><a href="blog.html">The Boxesby Blog</a></li>
+					<li><a href="blog">The Boxesby Blog</a></li>
 					<li><a href="termsofservice.html">Terms of Service</a></li>
-					<li><a href="privacy.html">Privacy Policy</a></li>
+					<li><a href="privacypolicy.html">Privacy Policy</a></li>
 				</ul>
 			</div>
 			<div class="col-md-2 ">
 				<ul class="list-unstyled">
-					<li><a href="general.html">general</a></li>
-					<li><a href="hiring.html">We Are Hiring</a></li>
+					<li>general</li>
+					<li><a href="wearehiring.html">We Are Hiring</a></li>
 					<li><a href="directory.html">Boxesby Directory</a></li>
 					<li><a href="levels.html">Levels</a></li>
-					<li><a href="blog.html">The Boxesby Blog</a></li>
+					<li><a href="blog">The Boxesby Blog</a></li>
 					<li><a href="termsofservice.html">Terms of Service</a></li>
-					<li><a href="privacy.html">Privacy Policy</a></li>
+					<li><a href="privacypolicy.html">Privacy Policy</a></li>
 				</ul>
 			</div>
 			<div class="col-md-2 ">
