--- a/hackathonsuperpowers.html
+++ b/hackathonsuperpowers.html
@@ -77,52 +77,52 @@
 		</div>
 	</div>
 	<footer class="row" id="footer">
-		<div class="col-md-2 col-md-offset-2">
-			<ul class="list-unstyled">
-				<li><a href="letsconnect.html">let's connect</a></li>
-				<li><a href="hiring.html">We Are Hiring</a></li>
-				<li><a href="directory.html">Boxesby Directory</a></li>
-				<li><a href="levels.html">Levels</a></li>
-				<li><a href="blog.html">The Boxesby Blog</a></li>
-				<li><a href="termsofservice.html">Terms of Service</a></li>
-				<li><a href="privacy.html">Privacy Policy</a></li>
-			</ul>
+			<div class="col-md-2 col-md-offset-2">
+				<ul class="list-unstyled">
+					<li>let's connect</li>
+					<li><a href="wearehiring.html">We Are Hiring</a></li>
+					<li><a href="directory.html">Boxesby Directory</a></li>
+					<li><a href="levels.html">Levels</a></li>
+					<li><a href="blog">The Boxesby Blog</a></li>
+					<li><a href="termsofservice.html">Terms of Service</a></li>
+					<li><a href="privacypolicy.html">Privacy Policy</a></li>
+				</ul>
+			</div>
+			<div class="col-md-2 ">
+				<ul class="list-unstyled">
+					<li>media & press</li>
+					<li><a href="wearehiring.html">We Are Hiring</a></li>
+					<li><a href="directory.html">Boxesby Directory</a></li>
+					<li><a href="levels.html">Levels</a></li>
+					<li><a href="blog">The Boxesby Blog</a></li>
+					<li><a href="termsofservice.html">Terms of Service</a></li>
+					<li><a href="privacypolicy.html">Privacy Policy</a></li>
+				</ul>
+			</div>
+			<div class="col-md-2 ">
+				<ul class="list-unstyled">
+					<li>general</li>
+					<li><a href="wearehiring.html">We Are Hiring</a></li>
+					<li><a href="directory.html">Boxesby Directory</a></li>
+					<li><a href="levels.html">Levels</a></li>
+					<li><a href="blog">The Boxesby Blog</a></li>
+					<li><a href="termsofservice.html">Terms of Service</a></li>
+					<li><a href="privacypolicy.html">Privacy Policy</a></li>
+				</ul>
+			</div>
+			<div class="col-md-2 ">
+				<ul class="list-unstyled copyrightcol">
+					<li>boxesby</li>
+					<li>&copy; Boxesby International Limited 2013</li>
+					<li>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras fermentum tellus ut semper convallis. Nulla lacinia leo sed turpis vulputate aliquam. Aliquam sit amet enim et risus.
+					</li>
+				</ul>
+			</div>
+		</footer>
+		<div class="row">
+			<div class="col-md-12 redline"></div>
 		</div>
-		<div class="col-md-2 ">
-			<ul class="list-unstyled">
-				<li><a href="mediapress.html">media and press</a></li>
-				<li><a href="hiring.html">We Are Hiring</a></li>
-				<li><a href="directory.html">Boxesby Directory</a></li>
-				<li><a href="levels.html">Levels</a></li>
-				<li><a href="blog.html">The Boxesby Blog</a></li>
-				<li><a href="termsofservice.html">Terms of Service</a></li>
-				<li><a href="privacy.html">Privacy Policy</a></li>
-			</ul>
-		</div>
-		<div class="col-md-2 ">
-			<ul class="list-unstyled">
-				<li><a href="general.html">general</a></li>
-				<li><a href="hiring.html">We Are Hiring</a></li><!DOCTYPE html>
-				<li><a href="directory.html">Boxesby Directory</a></li>
-				<li><a href="levels.html">Levels</a></li>
-				<li><a href="blog.html">The Boxesby Blog</a></li>
-				<li><a href="termsofservice.html">Terms of Service</a></li>
-				<li><a href="privacy.html">Privacy Policy</a></li>
-			</ul>
-		</div>
-		<div class="col-md-2 ">
-			<ul class="list-unstyled copyrightcol">
-				<li>boxesby</li>
-				<li>&copy; Boxesby International Limited 2013</li>
-				<li>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras fermentum tellus ut semper convallis. Nulla lacinia leo sed turpis vulputate aliquam. Aliquam sit amet enim et risus.
-				</li>
-			</ul>
-		</div>
-	</footer>
-	<div class="row">
-		<div class="col-md-12 redline"></div>
-	</div>
 	
 <script src="js/bootstrap.min.js"></script>
 </body>
