--- a/termsofservice.html
+++ b/termsofservice.html
@@ -69,7 +69,7 @@
 		<footer class="row" id="footer">
 			<div class="col-md-2 col-md-offset-2">
 				<ul class="list-unstyled">
-					<li><a href="letsconnect.html">let's connect</a></li>
+					<li>let's connect</li>
 					<li><a href="wearehiring.html">We Are Hiring</a></li>
 					<li><a href="directory.html">Boxesby Directory</a></li>
 					<li><a href="levels.html">Levels</a></li>
@@ -80,7 +80,7 @@
 			</div>
 			<div class="col-md-2 ">
 				<ul class="list-unstyled">
-					<li><a href="mediapress.html">media and press</a></li>
+					<li>media & press</li>
 					<li><a href="wearehiring.html">We Are Hiring</a></li>
 					<li><a href="directory.html">Boxesby Directory</a></li>
 					<li><a href="levels.html">Levels</a></li>
@@ -91,7 +91,7 @@
 			</div>
 			<div class="col-md-2 ">
 				<ul class="list-unstyled">
-					<li><a href="general.html">general</a></li>
+					<li>general</li>
 					<li><a href="wearehiring.html">We Are Hiring</a></li>
 					<li><a href="directory.html">Boxesby Directory</a></li>
 					<li><a href="levels.html">Levels</a></li>
