fixed privacy policy link

--- a/hackathonsuperpowers.html
+++ b/hackathonsuperpowers.html
@@ -85,7 +85,7 @@
 					<li><a href="levels.html">Levels</a></li>
 					<li><a href="blog">The Boxesby Blog</a></li>
 					<li><a href="termsofservice.html">Terms of Service</a></li>
-					<li><a href="privacypolicy.html">Privacy Policy</a></li>
+					<li><a href="privacy.html">Privacy Policy</a></li>
 				</ul>
 			</div>
 			<div class="col-md-2 ">
@@ -96,7 +96,7 @@
 					<li><a href="levels.html">Levels</a></li>
 					<li><a href="blog">The Boxesby Blog</a></li>
 					<li><a href="termsofservice.html">Terms of Service</a></li>
-					<li><a href="privacypolicy.html">Privacy Policy</a></li>
+					<li><a href="privacy.html">Privacy Policy</a></li>
 				</ul>
 			</div>
 			<div class="col-md-2 ">
@@ -107,7 +107,7 @@
 					<li><a href="levels.html">Levels</a></li>
 					<li><a href="blog">The Boxesby Blog</a></li>
 					<li><a href="termsofservice.html">Terms of Service</a></li>
-					<li><a href="privacypolicy.html">Privacy Policy</a></li>
+					<li><a href="privacy.html">Privacy Policy</a></li>
 				</ul>
 			</div>
 			<div class="col-md-2 ">
