--- a/hiring.html
+++ b/hiring.html
@@ -53,7 +53,7 @@
 					<li><a href="levels.html">Levels</a></li>
 					<li><a href="blog">The Boxesby Blog</a></li>
 					<li><a href="termsofservice.html">Terms of Service</a></li>
-					<li><a href="privacypolicy.html">Privacy Policy</a></li>
+					<li><a href="privacy.html">Privacy Policy</a></li>
 				</ul>
 			</div>
 			<div class="col-md-2 ">
@@ -64,7 +64,7 @@
 					<li><a href="levels.html">Levels</a></li>
 					<li><a href="blog">The Boxesby Blog</a></li>
 					<li><a href="termsofservice.html">Terms of Service</a></li>
-					<li><a href="privacypolicy.html">Privacy Policy</a></li>
+					<li><a href="privacy.html">Privacy Policy</a></li>
 				</ul>
 			</div>
 			<div class="col-md-2 ">
@@ -75,7 +75,7 @@
 					<li><a href="levels.html">Levels</a></li>
 					<li><a href="blog">The Boxesby Blog</a></li>
 					<li><a href="termsofservice.html">Terms of Service</a></li>
-					<li><a href="privacypolicy.html">Privacy Policy</a></li>
+					<li><a href="privacy.html">Privacy Policy</a></li>
 				</ul>
 			</div>
 			<div class="col-md-2 ">
