--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 					<li><a href="levels.html">Levels</a></li>
 					<li><a href="blog">The Boxesby Blog</a></li>
 					<li><a href="termsofservice.html">Terms of Service</a></li>
-					<li><a href="privacypolicy.html">Privacy Policy</a></li>
+					<li><a href="privacy.html">Privacy Policy</a></li>
 				</ul>
 			</div>
 			<div class="col-md-2 ">
@@ -206,7 +206,7 @@
 					<li><a href="levels.html">Levels</a></li>
 					<li><a href="blog">The Boxesby Blog</a></li>
 					<li><a href="termsofservice.html">Terms of Service</a></li>
-					<li><a href="privacypolicy.html">Privacy Policy</a></li>
+					<li><a href="privacy.html">Privacy Policy</a></li>
 				</ul>
 			</div>
 			<div class="col-md-2 ">
@@ -217,7 +217,7 @@
 					<li><a href="levels.html">Levels</a></li>
 					<li><a href="blog">The Boxesby Blog</a></li>
 					<li><a href="termsofservice.html">Terms of Service</a></li>
-					<li><a href="privacypolicy.html">Privacy Policy</a></li>
+					<li><a href="privacy.html">Privacy Policy</a></li>
 				</ul>
 			</div>
 			<div class="col-md-2 ">
