--- a/termsofservice.html
+++ b/termsofservice.html
@@ -75,7 +75,7 @@
 					<li><a href="levels.html">Levels</a></li>
 					<li><a href="blog">The Boxesby Blog</a></li>
 					<li><a href="termsofservice.html">Terms of Service</a></li>
-					<li><a href="privacypolicy.html">Privacy Policy</a></li>
+					<li><a href="privacy.html">Privacy Policy</a></li>
 				</ul>
 			</div>
 			<div class="col-md-2 ">
@@ -86,7 +86,7 @@
 					<li><a href="levels.html">Levels</a></li>
 					<li><a href="blog">The Boxesby Blog</a></li>
 					<li><a href="termsofservice.html">Terms of Service</a></li>
-					<li><a href="privacypolicy.html">Privacy Policy</a></li>
+					<li><a href="privacy.html">Privacy Policy</a></li>
 				</ul>
 			</div>
 			<div class="col-md-2 ">
@@ -97,7 +97,7 @@
 					<li><a href="levels.html">Levels</a></li>
 					<li><a href="blog">The Boxesby Blog</a></li>
 					<li><a href="termsofservice.html">Terms of Service</a></li>
-					<li><a href="privacypolicy.html">Privacy Policy</a></li>
+					<li><a href="privacy.html">Privacy Policy</a></li>
 				</ul>
 			</div>
 			<div class="col-md-2 ">
