better footer, css transitions for navigation on every page.

--- a/hiring.html
+++ b/hiring.html
@@ -15,7 +15,7 @@
 					<img src="img/logo.png" alt="BoxesBy" class="logo">
 				</a>
 				<ul class="nav nav-pills">
-					<li class="active"><a href="#">Home</a></li>
+					<li class="selected"><a href="#">Home</a></li>
 					<li><a href="mailto:box@boxesby.com?subject=Request to Curate a Box&body=#please include your twitter handle">make a box</a></li>
 					<li><a href="signin.html">login</a></li>
 					<li><a href="signup.html">sign up</a></li>
@@ -80,11 +80,11 @@
 			</div>
 			<div class="col-md-2 ">
 				<ul class="list-unstyled copyrightcol">
-					<li>boxesby</li>
 					<li>&copy; Boxesby International Limited 2013</li>
-					<li>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras fermentum tellus ut semper convallis. Nulla lacinia leo sed turpis vulputate aliquam. Aliquam sit amet enim et risus.
+					<li class="made-with-love">
+						Made with <span class="glyphicon glyphicon-heart"></span> in Chicago and San Diego.
 					</li>
+					<li><img src="img/logo.png" alt="BoxesBy" class="img-responsive footer-logo"></li>
 				</ul>
 			</div>
 		</footer>
