--- a/index.html
+++ b/index.html
@@ -222,17 +222,14 @@
 			</div>
 			<div class="col-md-2 ">
 				<ul class="list-unstyled copyrightcol">
-					<li>boxesby</li>
 					<li>&copy; Boxesby International Limited 2013</li>
-					<li>
-						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras fermentum tellus ut semper convallis. Nulla lacinia leo sed turpis vulputate aliquam. Aliquam sit amet enim et risus.
+					<li class="made-with-love">
+						Made with <span class="glyphicon glyphicon-heart"></span> in Chicago and San Diego.
 					</li>
+					<li><img src="img/logo.png" alt="BoxesBy" class="img-responsive footer-logo"></li>
 				</ul>
 			</div>
 		</footer>
-		<div class="row">
-			<div class="col-md-12 redline"></div>
-		</div>
 	</div>
 
 <script src="http://code.jquery.com/jquery-1.10.2.min.js"></script>	
