made changes to curator page.

--- a/hackathonsuperpowers.html
+++ b/hackathonsuperpowers.html
@@ -22,15 +22,16 @@
 				</ul>			
 			</div>
 		</div>
-	</div>
-	<div class="container">
 		<div class="row">
 			
 			<div class="col-md-12">
-				<h2 class="subheading">Get geeky gadgets every month from famous celebrities!</h2>
+				<h1 class="subheading">Get stuff monthly from people you follow while supporting charities.</h1>
 			</div>	
 
 		</div>
+	</div>
+	<div class="container">
+		
 		
 		
 		
