--- a/tracymcgrady.html
+++ b/tracymcgrady.html
@@ -22,23 +22,21 @@
 				</ul>			
 			</div>
 		</div>
-	</div>
-	<div class="container">
 		<div class="row">
 			
 			<div class="col-md-12">
-				<h2 class="subheading">Get geeky gadgets every month from famous celebrities!</h2>
+				<h1 class="tagline">Get stuff monthly from people you follow while supporting charities.</h1>
 			</div>	
 
 		</div>
-		
-		
+	</div>
+	<div class="container">
 		
 		<div class="row">
 			
 			<div class="col-md-12">
 				<div class="table-responsive">
-					<table class="table selectedperson">
+					<table class="table">
 						<tr>
 							<td class="youtube-td">
 								<img src="http://i.imgur.com/AbLuB5l.jpg" alt="" class="img-responsive">
@@ -57,22 +55,24 @@
 
 		</div>
 		<div class="row">
-			<div class="col-md-10 col-md-offset-1 aboutbox">
-			
-				<h3>About the box</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean iaculis sagittis ullamcorper. In placerat purus mi, sed pulvinar purus sagittis in. Etiam eleifend varius libero. Vivamus et eros euismod, placerat eros id, dignissim lacus. Sed aliquam at libero id dictum. Etiam non interdum mi. Donec tristique massa at nisi commodo consectetur. Mauris imperdiet dapibus fringilla. Nulla elementum nec lorem ac tincidunt. Nulla leo orci, semper in mauris et, varius vehicula ipsum. Vestibulum magna diam, placerat nec augue vel, congue hendrerit turpis. Cras tempor dolor ut odio ultrices sagittis. Praesent fringilla enim elit, non luctus arcu semper eget. Fusce sit amet posuere leo, non ullamcorper felis. </p>
-			
-				<h3>Past Boxes</h3>
-				<div class="pastBoxes">
-					<div class="col-md-6">
-						<img src="img/pastBoxes.jpg" alt="" class="img-responsive"><h4>November 2013</h4>
-						<img src="img/pastBoxes.jpg" alt="" class="img-responsive"><h4>December 2013</h4>
-					</div>
-					<div class="col-md-6">
-						<img src="img/pastBoxes.jpg" alt="" class="img-responsive"><h4>November 2013</h4>
-						<img src="img/pastBoxes.jpg" alt="" class="img-responsive"><h4>December 2013</h4>
-					</div>
-				</div>	
+			<div class="col-md-12 aboutbox">
+				<div class="col-md-10 col-md-offset-1">
+				
+					<h3>About the box</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean iaculis sagittis ullamcorper. In placerat purus mi, sed pulvinar purus sagittis in. Etiam eleifend varius libero. Vivamus et eros euismod, placerat eros id, dignissim lacus. Sed aliquam at libero id dictum. Etiam non interdum mi. Donec tristique massa at nisi commodo consectetur. Mauris imperdiet dapibus fringilla. Nulla elementum nec lorem ac tincidunt. Nulla leo orci, semper in mauris et, varius vehicula ipsum. Vestibulum magna diam, placerat nec augue vel, congue hendrerit turpis. Cras tempor dolor ut odio ultrices sagittis. Praesent fringilla enim elit, non luctus arcu semper eget. Fusce sit amet posuere leo, non ullamcorper felis. </p>
+				
+					<h3>Past Boxes</h3>
+					<div class="pastBoxes">
+						<div class="col-md-6">
+							<img src="img/pastBoxes.jpg" alt="" class="img-responsive"><h4>November 2013</h4>
+							<img src="img/pastBoxes.jpg" alt="" class="img-responsive"><h4>December 2013</h4>
+						</div>
+						<div class="col-md-6">
+							<img src="img/pastBoxes.jpg" alt="" class="img-responsive"><h4>November 2013</h4>
+							<img src="img/pastBoxes.jpg" alt="" class="img-responsive"><h4>December 2013</h4>
+						</div>
+					</div>	
+				</div>
 			</div>
 		</div>
 	</div>
