published design for curators pages.

--- a/hackathonsuperpowers.html
+++ b/hackathonsuperpowers.html
@@ -25,40 +25,30 @@
 		<div class="row">
 			
 			<div class="col-md-12">
-				<h1 class="subheading">Get stuff monthly from people you follow while supporting charities.</h1>
+				<h1 class="tagline subheading">Get stuff monthly from people you follow while supporting charities.</h1>
 			</div>	
 
 		</div>
 	</div>
-	<div class="container">
-		
-		
-		
-		
 		<div class="row">
 			
-			<div class="col-md-12">
-				<div class="table-responsive">
-					<table class="table selectedperson">
-						<tr>
-							<td class="youtube-td">
-								<img src="http://i.imgur.com/AbLuB5l.jpg" alt="" class="img-responsive">
-							</td>
-							<td class="curator">
-								<img src="img/dave.png" alt="" class="avatar img-responsive">
-								<h3>Hackathon Superpowers</h3>
-								<h4>by Dave Fontenot</h4>
-								<h4 class="price">$19/m</h4>
-								<button type="button" class="btn btn-info order-button">order now</button>
-							</td>
-						</tr>
-					</table>
+			<div class="col-md-6 col-md-offset-3 selectedperson">
+				
+				<div class="row">
+					<div class="col-md-8">
+						<img src="http://i.imgur.com/AbLuB5l.jpg" alt="" class="img-responsive">
+					</div>
+					<div class="col-md-4 curator">
+						<img src="img/dave.png" alt="" class="avatar img-responsive">
+						<h3>Hackathon Superpowers</h3>
+						<h4>by Dave Fontenot</h4>
+						<h4 class="price">$19/m</h4>
+						<button type="button" class="btn btn-info order-button">order now</button>
+					</div>
 				</div>
-			</div>
-
 		</div>
 		<div class="row">
-			<div class="col-md-10 col-md-offset-1 aboutbox">
+			<div class="col-md-6 col-md-offset-3 aboutbox">
 			
 				<h3>About the box</h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean iaculis sagittis ullamcorper. In placerat purus mi, sed pulvinar purus sagittis in. Etiam eleifend varius libero. Vivamus et eros euismod, placerat eros id, dignissim lacus. Sed aliquam at libero id dictum. Etiam non interdum mi. Donec tristique massa at nisi commodo consectetur. Mauris imperdiet dapibus fringilla. Nulla elementum nec lorem ac tincidunt. Nulla leo orci, semper in mauris et, varius vehicula ipsum. Vestibulum magna diam, placerat nec augue vel, congue hendrerit turpis. Cras tempor dolor ut odio ultrices sagittis. Praesent fringilla enim elit, non luctus arcu semper eget. Fusce sit amet posuere leo, non ullamcorper felis. </p>
@@ -76,7 +66,6 @@
 				</div>	
 			</div>
 		</div>
-	</div>
 	<footer class="row" id="footer">
 			<div class="col-md-2 col-md-offset-2">
 				<ul class="list-unstyled">
