Added subtle avatar and description changes. And a massive homepage overhaul. :)

--- a/index.html
+++ b/index.html
@@ -35,33 +35,41 @@
 				<div class="col-md-2 col-md-offset-2">
 					<a href="hackathonsuperpowers.html">
 						<img src="img/dave.png" alt="" class="avatar">
-						<h3 class="featured-box-subtitle">Hackathon Superpowers</h3>
-						<h4 class="namesubtag">by Dave Fontenot</h4>
-						<p class="homeprice">$19/m</p>
+						<div class="description">
+							<h3 class="featured-box-subtitle">Hackathon Superpowers</h3>
+							<h4 class="namesubtag">by Dave Fontenot</h4>
+							<p class="homeprice">$19/m</p>
+						</div>
 					</a>
 				</div>
 				<div class="col-md-2">
 					<a href="tracymcgrady.html">
 						<img src="img/tracymcgrady.png" alt="" class="avatar">
-						<h3 class="featured-box-subtitle">Something Basketball?</h3>
-						<h4 class="namesubtag">by Tracy McGrady</h4>
+						<div class="description">
+							<h3 class="featured-box-subtitle">Something Basketball?</h3>
+							<h4 class="namesubtag">by Tracy McGrady</h4>
 						<p class="homeprice">$19/m</p>
+						</div>
 					</a>
 				</div>
 				<div class="col-md-2">
 					<a href="hackathonsuperpowers.html">
 						<img src="img/dave.png" alt="" class="avatar">
-						<h3 class="featured-box-subtitle">Hackathon Superpowers</h3>
-						<h4 class="namesubtag">by Dave Fontenot</h4>
-						<p class="homeprice">$19/m</p>
+						<div class="description">
+							<h3 class="featured-box-subtitle">Hackathon Superpowers</h3>
+							<h4 class="namesubtag">by Dave Fontenot</h4>
+							<p class="homeprice">$19/m</p>
+						</div>
 					</a>
 				</div>
 				<div class="col-md-2">
 					<a href="tracymcgrady.html">
 						<img src="img/tracymcgrady.png" alt="" class="avatar">
-						<h3 class="featured-box-subtitle">Something Basketball?</h3>
-						<h4 class="namesubtag">by Tracy McGrady</h4>
+						<div class="description">
+							<h3 class="featured-box-subtitle">Something Basketball?</h3>
+							<h4 class="namesubtag">by Tracy McGrady</h4>
 						<p class="homeprice">$19/m</p>
+						</div>
 					</a>
 				</div>
 
@@ -95,25 +103,31 @@
 							<td>
 								<a href="hackathonsuperpowers.html">
 									<img src="img/dave.png" alt="" class="avatar">
-									<h3 class="box-subtitle">Hackathon Superpowers</h3>
-									<h4 class="box-curator">by Dave Fontenot</h4>
-									<p class="box-price">$19/m</p>
+									<div class="description">
+										<h3 class="featured-box-subtitle">Hackathon Superpowers</h3>
+										<h4 class="namesubtag">by Dave Fontenot</h4>
+										<p class="homeprice">$19/m</p>
+									</div>
 								</a>
 							</td>
 							<td>
 								<a href="tracymcgrady.html">
 									<img src="img/tracymcgrady.png" alt="" class="avatar">
-									<h3 class="box-subtitle">Something Basketball?</h3>
-									<h4 class="box-curator">by Tracy McGrady</h4>
-									<p class="box-price">$19/m</p>
+									<div class="description">
+										<h3 class="featured-box-subtitle">Something Basketball?</h3>
+										<h4 class="namesubtag">by Tracy McGrady</h4>
+									<p class="homeprice">$19/m</p>
+									</div>
 								</a>
 							</td>
 							<td>
 								<a href="hackathonsuperpowers.html">
 									<img src="img/dave.png" alt="" class="avatar">
-									<h3 class="box-subtitle">Hackathon Superpowers</h3>
-									<h4 class="box-curator">by Dave Fontenot</h4>
-									<p class="box-price">$19/m</p>
+									<div class="description">
+										<h3 class="featured-box-subtitle">Hackathon Superpowers</h3>
+										<h4 class="namesubtag">by Dave Fontenot</h4>
+										<p class="homeprice">$19/m</p>
+									</div>
 								</a>
 							</td>
 						</tr>
@@ -121,25 +135,31 @@
 							<td>
 								<a href="tracymcgrady.html">
 									<img src="img/tracymcgrady.png" alt="" class="avatar">
-									<h3 class="box-subtitle">Something Basketball?</h3>
-									<h4 class="box-curator">by Tracy McGrady</h4>
-									<p class="box-price">$19/m</p>
+									<div class="description">
+										<h3 class="featured-box-subtitle">Something Basketball?</h3>
+										<h4 class="namesubtag">by Tracy McGrady</h4>
+									<p class="homeprice">$19/m</p>
+									</div>
 								</a>
 							</td>
 							<td>
 								<a href="hackathonsuperpowers.html">
 									<img src="img/dave.png" alt="" class="avatar">
-									<h3 class="box-subtitle">Hackathon Superpowers</h3>
-									<h4 class="box-curator">by Dave Fontenot</h4>
-									<p class="box-price">$19/m</p>
+									<div class="description">
+										<h3 class="featured-box-subtitle">Hackathon Superpowers</h3>
+										<h4 class="namesubtag">by Dave Fontenot</h4>
+										<p class="homeprice">$19/m</p>
+									</div>
 								</a>
 							</td>
 							<td>
 								<a href="tracymcgrady.html">
 									<img src="img/tracymcgrady.png" alt="" class="avatar">
-									<h3 class="box-subtitle">Something Basketball?</h3>
-									<h4 class="box-curator">by Tracy McGrady</h4>
-									<p class="box-price">$19/m</p>
+									<div class="description">
+										<h3 class="featured-box-subtitle">Something Basketball?</h3>
+										<h4 class="namesubtag">by Tracy McGrady</h4>
+									<p class="homeprice">$19/m</p>
+									</div>
 								</a>
 							</td>
 						</tr>
@@ -147,25 +167,31 @@
 							<td>
 								<a href="hackathonsuperpowers.html">
 									<img src="img/dave.png" alt="" class="avatar">
-									<h3 class="box-subtitle">Hackathon Superpowers</h3>
-									<h4 class="box-curator">by Dave Fontenot</h4>
-									<p class="box-price">$19/m</p>
+									<div class="description">
+										<h3 class="featured-box-subtitle">Hackathon Superpowers</h3>
+										<h4 class="namesubtag">by Dave Fontenot</h4>
+										<p class="homeprice">$19/m</p>
+									</div>
 								</a>
 							</td>
 							<td>
 								<a href="tracymcgrady.html">
 									<img src="img/tracymcgrady.png" alt="" class="avatar">
-									<h3 class="box-subtitle">Something Basketball?</h3>
-									<h4 class="box-curator">by Tracy McGrady</h4>
-									<p class="box-price">$19/m</p>
+									<div class="description">
+										<h3 class="featured-box-subtitle">Something Basketball?</h3>
+										<h4 class="namesubtag">by Tracy McGrady</h4>
+									<p class="homeprice">$19/m</p>
+									</div>
 								</a>
 							</td>
 							<td>
 								<a href="hackathonsuperpowers.html">
 									<img src="img/dave.png" alt="" class="avatar">
-									<h3 class="box-subtitle">Hackathon Superpowers</h3>
-									<h4 class="box-curator">by Dave Fontenot</h4>
-									<p class="box-price">$19/m</p>
+									<div class="description">
+										<h3 class="featured-box-subtitle">Hackathon Superpowers</h3>
+										<h4 class="namesubtag">by Dave Fontenot</h4>
+										<p class="homeprice">$19/m</p>
+									</div>
 								</a>
 							</td>
 						</tr>
